--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <div id="sidebar" class="bg-dark">
   <div class="p-4">
     <h4 class="text-light">Sidebar</h4>
+    <img src="..." class="img-fluid" alt="Responsive image">
     <ul class="list-unstyled">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
