--- a/index.html
+++ b/index.html
@@ -48,20 +48,25 @@
 <body>
 
 <div id="sidebar" class="bg-dark">
-  <div class="p-4">
-    <h4 class="text-light">Sidebar</h4>
-    <img src="..." class="img-fluid" alt="Responsive image">
-    <ul class="list-unstyled">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
+  <div class="p-4 text-center text-white">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuEsnNYDsciWWX1E7IgThntvpiwT8bJrFvI7r-TX3tvw&s" class="img-fluid mb-2 rounded-circle" alt="Responsive image">
+    <p class="h3">Nino P. Datiles</p>
+    <p class="h6 text-muted">DevOps Engineer</p>
+    <p>Polytechnic University of the Phillipines</p>
+    <a href="#" target="_blank">
+      <i class="fab fa-facebook fa-lg"></i>
+    </a>
+    <a href="#" target="_blank">
+      <i class="fas fa-envelope fa-lg"></i>
+    </a>
+    <a href="#" target="_blank">
+      <i class="fab fa-linkedin fa-lg"></i>
+    </a>
   </div>
 </div>
 
 <div id="content">
-  <button id="menu-toggle" class="btn btn-dark d-md-none">
+  <button id="menu-toggle-2" class="btn btn-dark d-md-none">
     <i class="fa fa-bars"></i>
   </button>
   <h2>Content Area</h2>
@@ -73,7 +78,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
     $(document).ready(function() {
-      $("#menu-toggle").click(function(e) {
+      $("#menu-toggle-2").click(function(e) {
         e.preventDefault();
         $("#sidebar").toggleClass("active");
         if ($("#sidebar").hasClass("active")) {
