--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Bootstrap Sidebar</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <title>My Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     body {
@@ -17,7 +17,6 @@
       top: 0;
       left: 0;
       width: 250px;
-      background-color: #343a40;
       transition: all 0.3s;
     }
     
@@ -42,24 +41,38 @@
       #content {
         margin-left: 0;
       }
+
+    }
+    a {
+      color: inherit;
+      text-decoration: none;
+      transition: color 0.5s; /* Add smooth transition effect */
+    }
+
+    a:hover {
+      color: rgb(132, 130, 130); /* Change to the color you want for the hover effect */
     }
   </style>
 </head>
 <body>
 
-<div id="sidebar" class="bg-dark">
+<div id="sidebar" class="bg-dark bg-gradient">
   <div class="p-4 text-center text-white">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuEsnNYDsciWWX1E7IgThntvpiwT8bJrFvI7r-TX3tvw&s" class="img-fluid mb-2 rounded-circle" alt="Responsive image">
-    <p class="h3">Nino P. Datiles</p>
-    <p class="h6 text-muted">DevOps Engineer</p>
-    <p>Polytechnic University of the Phillipines</p>
-    <a href="#" target="_blank">
+    <div class="row">
+      <strong class="fs-3 fw-bold">Nino P. Datiles</strong>
+    </div>
+    <div class="row">
+      <small class="text-secondary">DevOps Engineer</small>
+    </div>
+    <p class="mt-3">Polytechnic University of the Phillipines</p>
+    <a href="https://www.facebook.com/npd07" target="_blank">
       <i class="fab fa-facebook fa-lg"></i>
     </a>
     <a href="#" target="_blank">
       <i class="fas fa-envelope fa-lg"></i>
     </a>
-    <a href="#" target="_blank">
+    <a href="https://www.linkedin.com/in/niño-datiles-6622221b8" target="_blank">
       <i class="fab fa-linkedin fa-lg"></i>
     </a>
   </div>
@@ -69,7 +82,11 @@
   <button id="menu-toggle-2" class="btn btn-dark d-md-none">
     <i class="fa fa-bars"></i>
   </button>
-  <h2>Content Area</h2>
+  <h2 class="fw-bolder">About Me</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2 class="fw-bolder">Work Experience</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <h2 class="fw-bolder">Skills</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 </div>
 
