--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       transition: background-color 0.3s, border-color 0.3s;
     }
     body{
-      background: linear-gradient(20deg, #c6c6c6, #ffffff);
+      background: radial-gradient(circle, #260156, #550139);
     }
   </style>
 </head>
@@ -87,7 +87,7 @@
 
 <div id="sidebar" class="bg-dark bg-gradient">
   <div class="p-4 text-center text-white">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuEsnNYDsciWWX1E7IgThntvpiwT8bJrFvI7r-TX3tvw&s" class="img-fluid mb-2 rounded-circle" alt="Responsive image">
+    <img src="images/my-image.png" class="img-fluid mb-2 rounded-circle" alt="Responsive image">
     <div class="row">
       <strong class="fs-3 fw-bold">Nino P. Datiles</strong>
     </div>
@@ -132,7 +132,7 @@
   </div>
 
 </div>
-<div id="content">
+<div id="content" class="text-white">
   
   <button id="menu-toggle-2" class="btn btn-transparent d-md-none float-start" style="position: fixed; background-color: rgba(0, 0, 0, 0.5);">
     <i class="fa fa-bars"></i>
