--- a/index.html
+++ b/index.html
@@ -137,9 +137,16 @@
   <button id="menu-toggle-2" class="btn btn-transparent d-md-none float-start" style="position: fixed; background-color: rgba(0, 0, 0, 0.5);">
     <i class="fa fa-bars"></i>
   </button>
-  <h2 class="fw-bolder">About Me</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  <h2 class="fw-bolder">Work Experience</h2>
+  <!-- <h2 class="fw-bolder">About Me</h2> -->
+  <div class="row">
+    <p>Hi, I'm Niño, a DevOps Engineer with a passion for software development automation. <br> Welcome to my portfolio!
+    With a background in Software Engineering, I specialize in Automation. My expertise lies in Continous Integration and Continous Delivery.
+    Throughout my career, I've had the privilege of creating different pipelines to integrate different technologies/tools for software development. These experiences have honed my skills and allowed me to contribute to different projects I've handeled.
+    <!-- <p>In the future, I aim to [Your Future Goals or Aspirations]. I'm excited about [Specific Projects or Areas] and look forward to [Your Vision for the Future].</p> -->
+    Feel free to explore my portfolio to learn more about my work. If you'd like to get in touch, I'd love to connect. You can reach me at my email address or connect with me on my social media accounts.</p>
+  </div>
+  
+  <!-- <h2 class="fw-bolder">Work Experience</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   <h2 class="fw-bolder">Skills</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -149,7 +156,7 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
 
   
 </div>
