--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
+    :root {
+        --gradient: linear-gradient(45deg, #09f3db, rgb(245, 9, 245), #b8f709);
+    }
+
     body {
       font-family: Arial, sans-serif;
+      min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 1.125em;
+        line-height: 1.6;
+        color: #333;
+        background: #ddd;
+        background-size: 300%;
+      background-image: var(--gradient);
+      animation: bg-animation 25s infinite;
+    }
+
+    @keyframes bg-animation {
+        0% {background-position: left}
+        50% {background-position: right}
+        100% {background-position: left}
     }
     
     #sidebar {
@@ -78,8 +99,14 @@
       color: inherit; /* Use the default text color */
       transition: background-color 0.3s, border-color 0.3s;
     }
-    body{
-      background: radial-gradient(circle, #260156, #550139);
+
+    .fade-in-text {
+      opacity: 0; /* Set initial opacity to 0 (completely transparent) */
+      transition: opacity 1s ease-in-out; /* Define the transition properties */
+    }
+
+    .fade-in-text.active {
+      opacity: 1; /* Change opacity to 1 (fully visible) for the fade-in effect */
     }
   </style>
 </head>
@@ -108,7 +135,7 @@
       </div>
     </div>
     <footer>
-      <div class="line-with-text mt-5">
+      <div class="line-with-text mt-3">
         <div class="line"></div>
         <div class="text">Visit me at</div>
         <div class="line"></div>
@@ -139,11 +166,12 @@
   </button>
   <!-- <h2 class="fw-bolder">About Me</h2> -->
   <div class="row">
-    <p>Hi, I'm Niño, a DevOps Engineer with a passion for software development automation. <br> Welcome to my portfolio!
+    <p class="fade-in-text">Hi, I'm Niño, a DevOps Engineer with a passion for software development automation. <br> Welcome to my portfolio!
     With a background in Software Engineering, I specialize in Automation. My expertise lies in Continous Integration and Continous Delivery.
     Throughout my career, I've had the privilege of creating different pipelines to integrate different technologies/tools for software development. These experiences have honed my skills and allowed me to contribute to different projects I've handeled.
+    <!-- I'm deeply passionate about [Your Passion or Cause]. My motivation stems from [Reasons or Values]. I believe in [Your Beliefs or Principles] and strive to [Your Aspirations]. -->
     <!-- <p>In the future, I aim to [Your Future Goals or Aspirations]. I'm excited about [Specific Projects or Areas] and look forward to [Your Vision for the Future].</p> -->
-    Feel free to explore my portfolio to learn more about my work. If you'd like to get in touch, I'd love to connect. You can reach me at my email address or connect with me on my social media accounts.</p>
+    <br>Feel free to explore my portfolio to learn more about my work. If you'd like to get in touch, I'd love to connect. You can reach me at my email address or connect with me on my social media accounts.</p>
   </div>
   
   <!-- <h2 class="fw-bolder">Work Experience</h2>
@@ -158,13 +186,13 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
 
-  
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
+    // hide/show sidebar
     $(document).ready(function() {
       $("#menu-toggle-2").click(function(e) {
         e.preventDefault();
@@ -176,6 +204,12 @@
         }
       });
     });
+
+    // fade-in effect for text
+    $(document).ready(function() {
+      $('.fade-in-text').addClass('active'); // Add the 'active' class to trigger the fade-in effect
+    });
+
   </script>
 
 </body>
