--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta name="keywords" content="Niño P. Datiles, Portfolio">
   <meta name="author" content="Niño P. Datiles">
   <title>Portfolio - Niño P. Datiles</title>
-
+  <link rel="icon" type="image/x-icon" href="images/my-logo.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     :root {
-        --gradient: linear-gradient(45deg, #09f3db, rgb(245, 9, 245), #b8f709);
+        /* --gradient: linear-gradient(45deg, #09f3db, rgb(245, 9, 245), #b8f709); */
+        --gradient: linear-gradient(45deg, #020202, #ffffff);
     }
 
     body {
